--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1291,7 +1291,7 @@ function main() {
   <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getcxTrueColorSetFlag"
-    title="getcxTrueColorSetFlag: bool = false"><wbr />getcx<wbr />True<wbr />Color<wbr />Set<wbr />Flag<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="getcxTrueColorSetFlag: bool = true"><wbr />getcx<wbr />True<wbr />Color<wbr />Set<wbr />Flag<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1592,7 +1592,7 @@ Description : provides many basic utility functions required by other modules</p
 <div class="section" id="8">
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
-<dt id="getcxTrueColorSetFlag"><a name="getcxTrueColorSetFlag"></a><pre><span class="Identifier">getcxTrueColorSetFlag</span><span class="Other">:</span> bool <span class="Other">=</span> <span class="DecNumber">false</span></pre></dt>
+<dt id="getcxTrueColorSetFlag"><a name="getcxTrueColorSetFlag"></a><pre><span class="Identifier">getcxTrueColorSetFlag</span><span class="Other">:</span> bool <span class="Other">=</span> <span class="DecNumber">true</span></pre></dt>
 <dd>
 
 
@@ -1652,7 +1652,7 @@ issues n newLines , default = 1
 rndSample returns one rand sample from a sequence 
 
 </dd>
-<dt id="rndRGB"><a name="rndRGB,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndRGB</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt id="rndRGB"><a name="rndRGB,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndRGB</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>rndRGB</p>
 <p>returns a random RGB value from colors available in colorNames see cxconsts.nim for available values </p>
@@ -2409,7 +2409,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-19 22:25:25 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-21 20:58:12 UTC</small>
       </div>
     </div>
   </div>
