--- a/cxtime.html
+++ b/cxtime.html
@@ -1490,8 +1490,8 @@ Format yyyy
 <p>plusDays</p>
 <p>adds days to date string of format yyyy-MM-dd  or result of getDateStr()  or today()</p>
 <p>and returns a string of format yyyy-MM-dd</p>
-<p>the passed in date string must be a valid date or an error message will be returned </p>
-
+<p>the passed in date string must be a valid date or an error message will be returned</p>
+<pre class="listing"><span class="Identifier">echo</span> <span class="Identifier">plusDays</span><span class="Punctuation">(</span><span class="Identifier">cxtoday</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="DecNumber">343</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="minusDays"><a name="minusDays,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">minusDays</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span>
@@ -1683,7 +1683,7 @@ Format yyyy
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-19 22:25:26 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-21 20:58:14 UTC</small>
       </div>
     </div>
   </div>
