--- a/cx.html
+++ b/cx.html
@@ -1597,7 +1597,7 @@ Funding     : Here are three excellent reasons :
 <dt id="newColor"><a name="newColor,int,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">newColor</span><span class="Other">(</span><span class="Identifier">r</span><span class="Other">,</span> <span class="Identifier">g</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>newColor</p>
-<p>creates a new color string from r,g,b values passed in colors can be used as foregroundcolor in print,printLn routines and as bgr in cxPrint,cxPrintLn .</p>
+<p>creates a new color string from r,g,b values. Passed in colors can be used as foregroundcolor in print,printLn routines and as bgr in cxPrint,cxPrintLn .</p>
 <p>Example</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Test for rgb color 12345  &quot;</span> <span class="Operator">&amp;</span> <span class="Identifier">efb2</span> <span class="Operator">*</span> <span class="DecNumber">10</span><span class="Punctuation">,</span><span class="Identifier">newColor</span><span class="Punctuation">(</span><span class="DecNumber">27354</span><span class="Punctuation">,</span><span class="DecNumber">4763</span><span class="Punctuation">,</span><span class="DecNumber">1089</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
@@ -2059,7 +2059,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-21 20:58:08 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-22 20:21:20 UTC</small>
       </div>
     </div>
   </div>
