--- a/cxtime.html
+++ b/cxtime.html
@@ -1275,9 +1275,7 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#cxDateTime,"
-    title="cxDateTime(): string"><wbr />cx<wbr />Date<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#cxTimeZone,cxTz"
+      <li><a class="reference" href="#cxTimeZone,cxTz"
     title="cxTimeZone(amode: cxTz = long): string"><wbr />cx<wbr />Time<wbr />Zone<span class="attachedType" style="visibility:hidden">cxTz</span></a></li>
   <li><a class="reference" href="#toDateTime,string"
     title="toDateTime(date: string = &quot;2000-01-01&quot;): DateTime"><wbr />to<wbr />Date<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -1354,6 +1352,8 @@ function main() {
     title="cxToday(): string"><wbr />cx<wbr />Today<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxTime.t,"
     title="cxTime(): string"><wbr />cx<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxDateTime.t,"
+    title="cxDateTime(): string"><wbr />cx<wbr />Date<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1415,14 +1415,6 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<dt id="cxDateTime"><a name="cxDateTime,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxDateTime</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-<p>cxDateTime</p>
-<p>restunrs a date time string</p>
-<p>eg : 2018-08-23 16:48:50 </p>
-
-
-</dd>
 <dt id="cxTimeZone"><a name="cxTimeZone,cxTz"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxTimeZone</span><span class="Other">(</span><span class="Identifier">amode</span><span class="Other">:</span> <span class="Identifier">cxTz</span> <span class="Other">=</span> <span class="Identifier">long</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>cxTimeZone</p>
@@ -1525,9 +1517,9 @@ Format yyyy
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>createSeqDate</p>
-<p>creates a seq of dates in format yyyy-MM-dd</p>
+<p>creates a seq of continous dates in format yyyy-MM-dd</p>
 <p>from fromDate to fromDate + days</p>
-<pre class="listing"><span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">createseqdate</span><span class="Punctuation">(</span><span class="Identifier">cxtoday</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span> <span class="DecNumber">60</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
+<pre class="listing"><span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">createseqdate</span><span class="Punctuation">(</span><span class="Identifier">cxToday</span><span class="Punctuation">,</span> <span class="DecNumber">60</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="getRndDate"><a name="getRndDate,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRndDate</span><span class="Other">(</span><span class="Identifier">minyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">-</span> <span class="DecNumber">50</span><span class="Other">;</span>
@@ -1710,6 +1702,14 @@ Format yyyy
 
 
 </dd>
+<dt id="cxDateTime"><a name="cxDateTime.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">cxDateTime</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>cxDateTime</p>
+<p>restunrs a date time string</p>
+<p>eg : 2018-08-23 16:48:50 </p>
+
+
+</dd>
 
 </dl></div>
 
@@ -1720,7 +1720,7 @@ Format yyyy
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-25 12:54:53 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-26 21:31:47 UTC</small>
       </div>
     </div>
   </div>
