--- a/cxconsts.html
+++ b/cxconsts.html
@@ -2829,7 +2829,7 @@ function main() {
   <li><a class="reference" href="#emojis"
     title="emojis = [&quot;✓&quot;, &quot;✘&quot;, &quot;❤&quot;, &quot;☀&quot;, &quot;★&quot;, &quot;☆&quot;, &quot;☂&quot;, &quot;⚑&quot;, &quot;❄&quot;, &quot;♫&quot;, &quot;✂&quot;, &quot;™&quot;,
         &quot;©&quot;, &quot;&quot;, &quot;☠&quot;, &quot;☺&quot;, &quot;😃&quot;, &quot;😇&quot;, &quot;😂&quot;, &quot;😛&quot;, &quot;😊&quot;, &quot;😟&quot;, &quot;😢&quot;,
-        &quot;😡&quot;, &quot;😺&quot;, &quot;🐱&quot;, &quot;🐵&quot;, &quot;🐮&quot;]"><wbr />emojis<span class="attachedType" style="visibility:hidden"></span></a></li>
+        &quot;😡&quot;, &quot;😺&quot;, &quot;🐱&quot;, &quot;🐵&quot;, &quot;🐮&quot;, &quot;🔥&quot;, &quot;𝐄&quot;]"><wbr />emojis<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#ejm3"
     title="ejm3 = [&quot;😀&quot;, &quot;😁&quot;, &quot;😂&quot;, &quot;😃&quot;, &quot;😄&quot;, &quot;😅&quot;, &quot;😆&quot;, &quot;😇&quot;, &quot;😈&quot;, &quot;😉&quot;,
       &quot;😊&quot;, &quot;😋&quot;, &quot;😌&quot;, &quot;😍&quot;, &quot;😎&quot;, &quot;😏&quot;, &quot;😐&quot;, &quot;😑&quot;, &quot;😒&quot;, &quot;😓&quot;,
@@ -7100,7 +7100,7 @@ reset colors
 </dd>
 <dt id="emojis"><a name="emojis"></a><pre><span class="Identifier">emojis</span> <span class="Other">=</span> <span class="Other">[</span><span class="StringLit">&quot;✓&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;✘&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;❤&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;☀&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;★&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;☆&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;☂&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;⚑&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;❄&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;♫&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;✂&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;™&quot;</span><span class="Other">,</span>
         <span class="StringLit">&quot;©&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;☠&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;☺&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😃&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😇&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😂&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😛&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😊&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😟&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😢&quot;</span><span class="Other">,</span>
-        <span class="StringLit">&quot;😡&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😺&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🐱&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🐵&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🐮&quot;</span><span class="Other">]</span></pre></dt>
+        <span class="StringLit">&quot;😡&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;😺&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🐱&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🐵&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🐮&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;🔥&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;𝐄&quot;</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -8798,7 +8798,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-26 21:31:44 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-29 13:33:31 UTC</small>
       </div>
     </div>
   </div>
